button overlapping fixed

--- a/src/assets/scss/_all.scss
+++ b/src/assets/scss/_all.scss
@@ -2345,6 +2345,7 @@ text-align:center;
       width: 77px;
       padding: 0;
     }
+	.modal-body { padding-left:10px !important; padding-right:10px !important;}
   }
 
   .landingPage1Bg {
